--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
-fastapi
-uvicorn
-pydantic
-google-api-python-client
-google-auth-oauthlib
-google-auth-httplib2
-beautifulsoup4
-requests
-torch --index-url https://download.pytorch.org/whl/cpu
-transformers
-python-multipart
-python-dotenv
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.1.8
+colorama==0.4.6
+exceptiongroup==1.3.1
+fastapi==0.128.0
+filelock==3.19.1
+fsspec==2025.10.0
+h11==0.16.0
+idna==3.11
+Jinja2==3.1.6
+lxml==6.0.2
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
+numpy==2.0.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+requests==2.32.5
+soupsieve==2.8.1
+starlette==0.49.3
+sympy==1.14.0
+torch==2.8.0+cpu
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.39.0
