--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ requests==2.32.5
 soupsieve==2.8.1
 starlette==0.49.3
 sympy==1.14.0
-torch==2.8.0+cpu
+torch==2.8.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
