--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run verify:dist",
+    "build:skip-verify": "tsc && vite build",
+    "verify:dist": "node scripts/verify-dist.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
